test/libsolidity/syntaxTests/dataLocations/multiple_transient_data_location_function_parameter.sol
contract C {
    function f(uint[] transient transient x) public pure { }
}

// ----
// ParserError 3548: (45-54): Location already specified.
